--- a/index.html
+++ b/index.html
@@ -12,17 +12,10 @@
     <h1>Awesome Books</h1>
     <p>author 1</p>
   </header>
-  <ul>
-    <li>
-      <h3>Book 1</h3>
-      <p>author 1</p>
-      <button>Remove</button>
-    </li>
-    <li>
-      <h3>Book 2</h3>
-      <button href="">Remove</button>
-    </li>
-  </ul>
+  <section id="book-list">
+    <ul>
+    </ul>
+  </section>
   <form method="post" action="">
     <fieldset>
       <input type="text" placeholder="Title" >
@@ -32,5 +25,6 @@
     </fieldset>
     <button type="submit">Add</button>
   </form>
+  <script src="./books.js"></script>
 </body>
 </html>
