--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
     <ul>
     </ul>
   </section>
-  <form name="book" method="post">
-    <fieldset>
-      <label>
-        <input name="title" type="text" placeholder="Title" >
-      </label>
-      <label>
-        <input name="author" type="text" placeholder="Author" >
-      </label>
-    </fieldset>
-    <button name="btn-add" type="submit">Add</button>
-  </form>
+  <div class="hr-line"><hr></div>
+  <section class="formfields">
+    <h2>Add a new book</h3>
+      <form name="book" method="post">
+        <fieldset>
+          <label>
+            <input name="title" type="text" placeholder="Title" >
+          </label>
+          <label>
+            <input name="author" type="text" placeholder="Author" >
+          </label>
+        </fieldset>
+        <button class="add-btn" name="btn-add" type="submit">Add</button>
+      </form>
+  </section>
   <script src="./books.js"></script>
 </body>
 </html>
