--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
 <body>
   <header>
     <h1>Awesome Books</h1>
+    <nav>
+      <ul>
+        <li>List</li>
+        <li>Add New</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
   </header>
   <section id="book-list">
+    <header>
+      <h2>All Books List</h2>
+    </header>
     <ul>
     </ul>
   </section>
   <div class="hr-line"><hr></div>
   <section class="formfields">
-    <h2>Add a new book</h3>
+    <h2>Add a new book</h2>
       <form name="book" method="post">
         <fieldset>
           <label>
@@ -30,6 +40,22 @@
         <button class="add-btn" name="btn-add" type="submit">Add</button>
       </form>
   </section>
+  <section id="contact">
+    <header>
+      <h2>Contact Information</h2>
+    </header>
+    <p>Do you have any question?
+      <br> <br>You can contact us on:
+      <ul>
+        <li>our e-mail: email@gmail.com</li>
+        <li>our phone: 00567512546</li>
+        <li>our address: streetname 1547, city country</li>
+      </ul>
+    </p>
+  </section>
+  <footer>
+    Copyrights 2022
+  </footer>
   <script src="./books.js"></script>
 </body>
 </html>
