--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <title>Awesome Books</title>
 </head>
 <body>
-  <header>
-    <h1>Awesome Books</h1>
+  <header id="navbar">
+    <h5>Awesome Books</h5>
     <nav>
       <ul>
-        <li>List</li>
-        <li>Add New</li>
-        <li>Contact</li>
+        <li><a>List</a></li>
+        <li><a>Add New</a></li>
+        <li><a>Contact</a></li>
       </ul>
     </nav>
   </header>
