Add Date And Time To Main Page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </ul>
     </nav>
   </header>
+  <span id="datetime" datetime=""></span>
   <section id="book-list" class="">
     <header>
       <h2>All Books List</h2>
